# 2048-Game

./: .gitignore  CMakeLists.txt  README.md
DLC/: custom_board.json  step_500.json  timed_300.json
Data/: scores.txt  user.txt
Docs/: API.md  GameAndBoard.md
Inc/: app_log.h  auth.h  board.h  boardwidget.h  config.h  game.h  game_mode.h  generated_config.h.in  history.h  mainwindow.h  mod_loader.h  rank.h  save.h  storage.h  theme.h  ui.h  user.h  utils.h  widget_helpers.h
Src/: app_log.c  auth.c  board.c  boardwidget.cpp  game.c  game_mode.c  history.c  main.c  main.cpp  mainwindow.cpp  mod_loader.cpp  rank.c  save.c  storage.c  theme.cpp  ui.c  user.c  utils.c  widget_helpers.cpp
scripts/: build-run.ps1  generate-test-data.ps1  package-portable.ps1
